[package]
name = "wst"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-tungstenite = "0.19.0"
hyper-util = "0.1.20"
tokio = { version = "1.50.0", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
